Fix QDir::mkpath failing for drive paths on Windows

This fixes a regression introduced in 3e2cd8ef6f1ce4f467. We shouldn't try
to call mkdir for just a drive letter.

Task-number: QTBUG-31862

Change-Id: I56035857aec03f9f1cceef62e82f372486b7737b
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>
Reviewed-by: Kai Koehne <kai.koehne@digia.com>